Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <h2>
 <a id="purpose" class="anchor" href="#purpose" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Purpose</h2>
 
-<p>Pocketbook adds an error message if any of the form fields are filled out incorrectly.</p>
+<p>Pocketbook adds an error message if any of the form fields are filled out incorrectly.
+More logic can be added to clear out the errors when the fields are filled out.</p>
 
 <p><img src="http://i.imgur.com/yGaxsuR.gif"></p>
       </section>
